--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
