--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "razorpay": "^2.9.4"
   }
 }
