--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-query": "^3.39.3",
     "react-router": "^6.24.1",
     "react-router-dom": "^6.24.1"
   },
