--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.19.2",
     "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
+    "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
@@ -22,7 +23,8 @@
     "react-icons": "^5.2.1",
     "react-query": "^3.39.3",
     "react-router": "^6.24.1",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
