--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://gamiyash15:yash123@cluster0.puxk3.mongodb.net
+MONGO_URI=mongodb+srv://gamiyash15:yash123@cluster0.puxk3.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 EMAIL_USER=yashgami.it.15@gmail.com
 EMAIL_PASS=ewbi xdyc mlae lzps
 GOOGLE_CLIENT_ID=74910797095-ji87hpornfh6p330ks3kcaqr43i6e42i.apps.googleusercontent.com
