Try to fix google login bug at deployment site

--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,4 @@ RAZORPAY_KEY_ID=rzp_test_ngyG4h8LCdDkCg
 RAZORPAY_KEY_SECRET=IcYSbvH31fpwtvqmfpL6YVcf
 FRONTEND_URL=http://localhost:5173
 BACKEND_URL=http://localhost:3000
+RENDER_BACKEND_URL=https://exclusive-4.onrender.com
